<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleActorActivity">

    <!-- Título -->

    <!-- Nombre -->

    <!-- Nacionalidad -->

    <!-- Edad -->

    <!-- Altura -->

    <TextView
        android:id="@+id/tvTitulo2"
        android:layout_width="191dp"
        android:layout_height="34dp"
        android:layout_marginTop="32dp"
        android:text="@string/detalle_actor"
        android:textColor="#404040"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="182dp"
        android:layout_height="29dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="56dp"
        android:text="@string/nombre"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo2" />

    <TextView
        android:id="@+id/tvLongitud"
        android:layout_width="181dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/longitud"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLatitud" />

    <TextView
        android:id="@+id/tvLatitud"
        android:layout_width="180dp"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/latitud"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNacionalidad" />

    <TextView
        android:id="@+id/tvNacionalidad"
        android:layout_width="181dp"
        android:layout_height="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/nacionalidad"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNombre" />

    <TextView
        android:id="@+id/tvEdad"
        android:layout_width="181dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="112dp"
        android:text="@string/edad"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNacionalidad" />

    <TextView
        android:id="@+id/tvAltura"
        android:layout_width="180dp"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/altura"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEdad" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="168dp"
        android:layout_height="60dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="56dp"
        android:padding="16dp"
        android:text="Eliminar"
        android:backgroundTint="#42B244"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAltura" />

    <Button
        android:id="@+id/btnModificar"
        android:layout_width="169dp"
        android:layout_height="58dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="12dp"
        android:padding="16dp"
        android:text="Modificar"
        android:backgroundTint="#42B244"
        android:textColorLink="#63C250"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEliminar" />

    <Button
        android:id="@+id/btnVerMapa"
        android:layout_width="168dp"
        android:layout_height="60dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="12dp"
        android:padding="16dp"
        android:backgroundTint="#42B244"
        android:text="Ver Mapa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnModificar" />

</androidx.constraintlayout.widget.ConstraintLayout>
